.k8s/base/service.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: arborist
  spec:
    ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
